--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "font-awesome": "4.7.0",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
+    "jstree": "^3.3.4",
     "moment": "^2.18.1",
     "select2": "^4.0.3",
     "sweetalert": "^1.1.3"
